# datapack

./: .gitignore  Cargo.toml  README.md
src/: builder.rs  component.rs  lib.rs  namespace.rs
src/builder/: mcfunction.rs  structure.rs
tests/: build_test.rs
