[package]
name = "datapack"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "An easy way to create Minecraft datapacks in rust"
documentation = "https://docs.rs/datapack/1.0.0/datapack/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]

[dependencies]
zip = "0.6.2"